2001-12-31  Phil Edwards  <pme@gcc.gnu.org>

	* include/bits/stl_bvector.h:  Change calls to 3-argument distance()
	into standard 2-argument version.
	* include/bits/stl_deque.h:  Likewise.
	* include/bits/stl_tempbuf.h:  Likewise.
	* include/bits/stl_tree.h:  Likewise.
	* include/bits/stl_vector.h:  Likewise.
	* include/ext/stl_hashtable.h:  Likewise.
	* include/bits/stl_iterator_base_funcs.h:  Move distance() extension...
	* include/ext/iterator:  to here.  New file.
	* include/Makefile.am (ext_headers):  Add new file, alphabatize.
	* include/Makefile.in:  Regenerate.

2001-12-31  Phil Edwards  <pme@gcc.gnu.org>

	* include/bits/stl_deque.h:  Doxygenate with initial/example hooks.
	Clean up spacing and indentation.

2001-12-31  Paolo Carlini  <pcarlini@unitus.it>

	* include/ext/slist:  Move into __gnu_cxx,
        tweak, add using declarations.

2001-12-31  Paolo Carlini  <pcarlini@unitus.it>

	* include/ext/hash_map:  Move into __gnu_cxx,
	tweak, add using declarations.
	* include/ext/hash_set:  Ditto.
	* include/ext/ropeimpl.h:  Ditto.
	* include/ext/stl_hash_fun.h:  Ditto.
	* include/ext/stl_hashtable.h:  Ditto.
	* include/ext/stl_rope.h:  Ditto.
	* src/ext-inst.cc: Tweak.
	* testsuite/ext/rope.cc: Tweak.

2001-12-31  Paolo Carlini  <pcarlini@unitus.it>

	* include/backward/algo.h:  Include <ext/algorithm>,
	tweak using declarations.
	
2001-12-29  Richard Henderson  <rth@redhat.com>

	* config/os/hpux/bits/os_defines.h: Don't define __glibcpp_long_bits.
	* config/os/hpux/bits/cpu_limits.h: New file.
	* configure.target (CPULIMITSH): Use it.

2001-12-28  Richard Henderson  <rth@redhat.com>

	* config/cpu/ia64/bits/cpu_limits.h: New file.
	* config/os/osf/osf5.0/bits/cpu_limits.h: New file.
	* configure.target (CPULIMITSH): Use them.

2001-12-28  Phil Edwards  <pme@gcc.gnu.org>

	* include/bits/c++config:  Move doxygen hook comment...
	* docs/doxygen/doxygroups.cc:  ...to here.

2001-12-28  Phil Edwards  <pme@gcc.gnu.org>

	PR libstdc++/2054