@@ -1,3 +1,10 @@
+2001-12-31  Paolo Carlini  <pcarlini@unitus.it>
+
+	* include/backward/algo.h:  Add two more using declarations.
+	* include/backward/iterator.h:  Include <ext/iterator>,
+	add using declaration.
+	* include/ext/algorithm:  Add #pragma GCC system_header.
+
 2001-12-31  Phil Edwards  <pme@gcc.gnu.org>
 
 	* include/bits/stl_bvector.h:  Change calls to 3-argument distance()
